--- a/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -13,6 +13,10 @@
                 <outlet property="bottomView" destination="qNk-6a-lpE" id="W2c-9h-BEU"/>
                 <outlet property="currencyFirstLabel" destination="HUc-tS-eYj" id="QEf-HD-tz4"/>
                 <outlet property="currencySecondLabel" destination="niL-Cf-YvK" id="BXu-IM-0Ei"/>
+                <outlet property="currentFirstButton" destination="O0Y-Ut-6Uc" id="tr4-Kx-TsC"/>
+                <outlet property="currentFirstImage" destination="dHT-3Z-VMD" id="v6I-Ik-njB"/>
+                <outlet property="currentSecondButton" destination="jx3-Ka-HeG" id="KaT-mD-eLK"/>
+                <outlet property="currentSecondImage" destination="QL0-pd-9cW" id="Nb4-FL-fpz"/>
                 <outlet property="priceComparisonButton" destination="TsT-H9-3pB" id="Lh5-1v-2Ec"/>
                 <outlet property="recipientTextField" destination="k1l-9I-2z7" id="t7p-qb-sZD"/>
                 <outlet property="sendAmountTextField" destination="K65-nR-ioh" id="dwR-kP-rDI"/>
@@ -36,7 +40,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GD-8G-L5I">
-                    <rect key="frame" x="23" y="38" width="20" height="22"/>
+                    <rect key="frame" x="23" y="45" width="20" height="22"/>
                     <state key="normal" image="close"/>
                     <connections>
                         <action selector="close" destination="-1" eventType="touchUpInside" id="fWk-r1-VXh"/>
@@ -52,7 +56,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZQ-MW-lJP" userLabel="Top View">
-                    <rect key="frame" x="15" y="80" width="384" height="83.333333333333314"/>
+                    <rect key="frame" x="15" y="87" width="384" height="83.333333333333314"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ngk-8k-eeu">
                             <rect key="frame" x="14.999999999999986" y="14.000000000000004" width="248.66666666666663" height="55.333333333333343"/>
@@ -64,7 +68,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1000" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K65-nR-ioh" userLabel="Send Amount">
-                                    <rect key="frame" x="0.0" y="30.666666666666671" width="248.66666666666666" height="24.666666666666671"/>
+                                    <rect key="frame" x="0.0" y="30.666666666666657" width="248.66666666666666" height="24.666666666666671"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -83,7 +87,7 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="currentCountry" destination="-1" eventType="touchUpInside" id="wVE-hc-DJS"/>
+                                <action selector="getCountryFrom:" destination="-1" eventType="touchUpInside" id="Lj2-sb-xwu"/>
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usa" translatesAutoresizingMaskIntoConstraints="NO" id="dHT-3Z-VMD">
@@ -153,7 +157,7 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="currentCountry" destination="-1" eventType="touchUpInside" id="Ny9-SB-ezA"/>
+                                <action selector="getCountryTo:" destination="-1" eventType="touchUpInside" id="MqN-3P-3Ra"/>
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usa" translatesAutoresizingMaskIntoConstraints="NO" id="QL0-pd-9cW">
@@ -260,7 +264,7 @@
                 <constraint firstItem="O2M-wb-RRI" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.8" id="DbE-NQ-hZQ"/>
                 <constraint firstItem="oip-YK-bLu" firstAttribute="top" secondItem="TsT-H9-3pB" secondAttribute="bottom" constant="148.66666666666663" id="Eho-Mi-nRQ"/>
                 <constraint firstItem="qNk-6a-lpE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="HtU-8M-Axi"/>
-                <constraint firstItem="0GD-8G-L5I" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="38" id="MH5-yb-5Mx"/>
+                <constraint firstItem="0GD-8G-L5I" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="45" id="MH5-yb-5Mx"/>
                 <constraint firstItem="TsT-H9-3pB" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="O9X-fk-rXq"/>
                 <constraint firstItem="TsT-H9-3pB" firstAttribute="top" secondItem="O2M-wb-RRI" secondAttribute="bottom" constant="27" id="SZ4-NC-dh8"/>
                 <constraint firstItem="O2M-wb-RRI" firstAttribute="top" secondItem="qNk-6a-lpE" secondAttribute="bottom" constant="23" id="Vhk-rR-cEz"/>
