--- a/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/Country View Controller/Country Cell/CountryCell.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/Country View Controller/Country Cell/CountryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="179" id="KGk-i7-Jjw" customClass="CountryCell" customModule="Project_TransferWise" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryCell" rowHeight="179" id="KGk-i7-Jjw" customClass="CountryCell" customModule="Project_TransferWise" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="370" height="179"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,33 +18,42 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rhq-AO-IRi">
-                        <rect key="frame" x="14" y="49" width="91" height="81"/>
+                        <rect key="frame" x="0.0" y="79.5" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="O9v-SA-Ye7"/>
+                            <constraint firstAttribute="height" constant="20" id="lCy-5X-mTZ"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TOu-yF-9vj">
-                        <rect key="frame" x="164" y="79" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="30" y="80" width="41.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIY-PD-Y3L">
-                        <rect key="frame" x="280" y="79" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="81.5" y="81" width="259" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="Rhq-AO-IRi" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.245946" id="6mF-Px-ZqD"/>
+                    <constraint firstItem="dIY-PD-Y3L" firstAttribute="leading" secondItem="TOu-yF-9vj" secondAttribute="trailing" constant="10" id="3O6-k5-aUC"/>
                     <constraint firstItem="Rhq-AO-IRi" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Aec-GZ-IYs"/>
-                    <constraint firstItem="TOu-yF-9vj" firstAttribute="leading" secondItem="Rhq-AO-IRi" secondAttribute="trailing" constant="59" id="L9v-L8-BB9"/>
+                    <constraint firstItem="dIY-PD-Y3L" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.7" id="K9F-SC-Vpr"/>
+                    <constraint firstItem="TOu-yF-9vj" firstAttribute="leading" secondItem="Rhq-AO-IRi" secondAttribute="trailing" constant="10" id="L9v-L8-BB9"/>
                     <constraint firstItem="TOu-yF-9vj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QTE-Ps-RQ0"/>
-                    <constraint firstItem="Rhq-AO-IRi" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.452514" id="XlU-1y-PAd"/>
                     <constraint firstItem="dIY-PD-Y3L" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aMU-JP-KEc"/>
-                    <constraint firstItem="Rhq-AO-IRi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="ocC-01-UbZ"/>
-                    <constraint firstAttribute="trailing" secondItem="dIY-PD-Y3L" secondAttribute="trailing" constant="48" id="pwB-Z2-Iv5"/>
+                    <constraint firstItem="Rhq-AO-IRi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ocC-01-UbZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="codeLabel" destination="TOu-yF-9vj" id="LHh-fO-dEj"/>
+                <outlet property="countryLabel" destination="dIY-PD-Y3L" id="DpL-Nu-MsY"/>
+                <outlet property="imageCountry" destination="Rhq-AO-IRi" id="l4O-dD-lj4"/>
+            </connections>
             <point key="canvasLocation" x="104.34782608695653" y="179.79910714285714"/>
         </tableViewCell>
     </objects>
