--- a/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/RecipientViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/RecipientViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,8 +18,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enc-zd-8pL">
-                    <rect key="frame" x="343" y="20" width="30" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enc-zd-8pL">
+                    <rect key="frame" x="321" y="20" width="30" height="30"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                     <state key="normal" title="Add">
                         <color key="titleColor" red="0.0" green="0.64313725490196072" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,10 +44,11 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="enc-zd-8pL" secondAttribute="trailing" constant="41" id="2Yi-5w-IlT"/>
-                <constraint firstItem="enc-zd-8pL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="343" id="AON-jt-2dD"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="enc-zd-8pL" secondAttribute="trailing" constant="63" id="2Yi-5w-IlT"/>
+                <constraint firstItem="enc-zd-8pL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="321" id="AON-jt-2dD"/>
                 <constraint firstItem="4i8-bB-L22" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Efx-YT-6cd"/>
                 <constraint firstItem="1V0-cE-Y6Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Klw-NF-du4"/>
                 <constraint firstItem="v3f-7V-PaV" firstAttribute="top" secondItem="4i8-bB-L22" secondAttribute="bottom" constant="83.999999999999943" id="O1E-Ln-PGL"/>
@@ -61,7 +62,6 @@
                 <constraint firstItem="v3f-7V-PaV" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.879227" id="tPd-nM-Ug1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="1V0-cE-Y6Y" secondAttribute="trailing" constant="292" id="wae-Nb-aUF"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140.57971014492756" y="134.5108695652174"/>
         </view>
     </objects>
